# graph_rag_knowledgebase

./: .env  .env.example  README.md  app.py  pyproject.toml  requirements.txt  setup_database_scripts
.streamlit/: config.toml
data/: legal_docs.jsonl  legal_ontology.ttl  legal_relations.jsonl
docs/: graphrag_app_en.html  graphrag_app_pt.html  legal_ontology_en.html  legal_ontology_en.txt  legal_ontology_pt.html  legal_ontology_pt_br.txt
rag_knowledgebase/: config.py  dataset.py  db_setup.py  mongodb.py  rag_pipeline.py
scripts/: generate_dataset.py  ingest_graph_store.py  ingest_vector_store.py  run_streamlit.sh
