[project]
name = "graph-rag-knowledgebase"
version = "0.1.0"
description = "Legal RAG app with Python, LangChain, MongoDB Atlas Vector Search, and Streamlit"
requires-python = "==3.14.*"
dependencies = [
    "streamlit>=1.37,<2",
    "pymongo>=4.10,<5",
    "langchain>=1.0.0,<2",
    "langchain-openai>=1.0.0,<2",
    "langchain-mongodb>=0.11.0,<0.12",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8,<3",
]

